--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@eva/plugin-renderer-sprite-animation": "^1.0.0",
     "@eva/plugin-renderer-text": "^1.0.0",
     "@eva/plugin-transition": "^1.0.0",
-    "@eva/renderer-adapter": "^1.0.0"
+    "@eva/renderer-adapter": "^1.0.0",
+    "eventemitter3": "^4.0.7"
   }
 }
